add db card&scores and fix load all results
