# gen/match.pb.validate.go
@@ -883,9 +883,9 @@ func (m *ResultScore) validate(all bool) error {
 
 	// no validation rules for AwayTeamGoal
 
-	// no validation rules for TeamWin
+	// no validation rules for HomeTeam
 
-	// no validation rules for TeamLose
+	// no validation rules for AwayTeam
 
 	// no validation rules for YellowCardHome
 
@@ -1208,6 +1208,144 @@ var _ interface {
 	Cause() error
 	ErrorName() string
 } = ResultScoreResponseValidationError{}
+
+// Validate checks the field values on ResultScoreListResponse with the rules
+// defined in the proto definition for this message. If any rules are
+// violated, the first error encountered is returned, or nil if there are no violations.
+func (m *ResultScoreListResponse) Validate() error {
+	return m.validate(false)
+}
+
+// ValidateAll checks the field values on ResultScoreListResponse with the
+// rules defined in the proto definition for this message. If any rules are
+// violated, the result is a list of violation errors wrapped in
+// ResultScoreListResponseMultiError, or nil if none found.
+func (m *ResultScoreListResponse) ValidateAll() error {
+	return m.validate(true)
+}
+
+func (m *ResultScoreListResponse) validate(all bool) error {
+	if m == nil {
+		return nil
+	}
+
+	var errors []error
+
+	for idx, item := range m.GetData() {
+		_, _ = idx, item
+
+		if all {
+			switch v := interface{}(item).(type) {
+			case interface{ ValidateAll() error }:
+				if err := v.ValidateAll(); err != nil {
+					errors = append(errors, ResultScoreListResponseValidationError{
+						field:  fmt.Sprintf("Data[%v]", idx),
+						reason: "embedded message failed validation",
+						cause:  err,
+					})
+				}
+			case interface{ Validate() error }:
+				if err := v.Validate(); err != nil {
+					errors = append(errors, ResultScoreListResponseValidationError{
+						field:  fmt.Sprintf("Data[%v]", idx),
+						reason: "embedded message failed validation",
+						cause:  err,
+					})
+				}
+			}
+		} else if v, ok := interface{}(item).(interface{ Validate() error }); ok {
+			if err := v.Validate(); err != nil {
+				return ResultScoreListResponseValidationError{
+					field:  fmt.Sprintf("Data[%v]", idx),
+					reason: "embedded message failed validation",
+					cause:  err,
+				}
+			}
+		}
+
+	}
+
+	// no validation rules for Message
+
+	if len(errors) > 0 {
+		return ResultScoreListResponseMultiError(errors)
+	}
+
+	return nil
+}
+
+// ResultScoreListResponseMultiError is an error wrapping multiple validation
+// errors returned by ResultScoreListResponse.ValidateAll() if the designated
+// constraints aren't met.
+type ResultScoreListResponseMultiError []error
+
+// Error returns a concatenation of all the error messages it wraps.
+func (m ResultScoreListResponseMultiError) Error() string {
+	var msgs []string
+	for _, err := range m {
+		msgs = append(msgs, err.Error())
+	}
+	return strings.Join(msgs, "; ")
+}
+
+// AllErrors returns a list of validation violation errors.
+func (m ResultScoreListResponseMultiError) AllErrors() []error { return m }
+
+// ResultScoreListResponseValidationError is the validation error returned by
+// ResultScoreListResponse.Validate if the designated constraints aren't met.
+type ResultScoreListResponseValidationError struct {
+	field  string
+	reason string
+	cause  error
+	key    bool
+}
+
+// Field function returns field value.
+func (e ResultScoreListResponseValidationError) Field() string { return e.field }
+
+// Reason function returns reason value.
+func (e ResultScoreListResponseValidationError) Reason() string { return e.reason }
+
+// Cause function returns cause value.
+func (e ResultScoreListResponseValidationError) Cause() error { return e.cause }
+
+// Key function returns key value.
+func (e ResultScoreListResponseValidationError) Key() bool { return e.key }
+
+// ErrorName returns error name.
+func (e ResultScoreListResponseValidationError) ErrorName() string {
+	return "ResultScoreListResponseValidationError"
+}
+
+// Error satisfies the builtin error interface
+func (e ResultScoreListResponseValidationError) Error() string {
+	cause := ""
+	if e.cause != nil {
+		cause = fmt.Sprintf(" | caused by: %v", e.cause)
+	}
+
+	key := ""
+	if e.key {
+		key = "key for "
+	}
+
+	return fmt.Sprintf(
+		"invalid %sResultScoreListResponse.%s: %s%s",
+		key,
+		e.field,
+		e.reason,
+		cause)
+}
+
+var _ error = ResultScoreListResponseValidationError{}
+
+var _ interface {
+	Field() string
+	Reason() string
+	Key() bool
+	Cause() error
+	ErrorName() string
+} = ResultScoreListResponseValidationError{}
 
 // Validate checks the field values on MatchCalendarResponse_Data with the
 // rules defined in the proto definition for this message. If any rules are
